--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,6 @@
-include README
+include README.rst
 include LICENSE
 include INSTALL
 include odplib/data/settings.xml
 include odplib/data/styles.xml
 include odplib/data/auto_list.xml
-include odplib/zipwrap
